[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celestia-types = "0.2.0"
hex = "0.4.3"
libp2p= {workspace= true, features = [
  "autonat",
  "ping",
  "gossipsub",
  "identify",
  "macros",
  "request-response",
  "kad",
]}
serde.workspace = true
thiserror.workspace = true
tokio = {version="1.38.0", features = ["macros", "sync"]}
tokio-util = "0.7.11"
