[package]
name = "query_client"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cometbft-rpc = {version="0.1.0-alpha.2",features=["http-client"]}
cosmos-sdk-proto = {version="0.21.1",features=["grpc-transport"]}
tokio = {version="1.37.0",features = ["rt","macros"]}
tonic = {version="0.11.0",features=["transport","gzip"]}
cosmrs = {workspace=true}
prost = "0.12.4"
prost-types = "0.12.4"
thiserror={workspace=true}
celestia-types = "0.2.0"
celestia-proto = "0.2.0"
reqwest = {version="0.12.4",features=["json"]}
serde = {workspace=true}
chrono = {version="0.4.38", features = ["serde"]}
