[package]
name = "ui-mobile"
version = "0.1.0"
authors = ["Rahul Srivastava <rahulsrivastava0587@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ui-mobile-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-dependencies = [
    "com.google.android.material:material:1.8.0",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[package.metadata.cargo-apple]
supported = false

[dependencies] 
log = "0.4.14"
chrono = {version="0.4", features = ["serde"]}
pollster = "0.2"
wgpu = "0.16"
egui = {version="0.22.0"}
winit = { version = "0.28", features = ["android-native-activity"] }
egui-winit = { version = "0.22.0", default-features = false, features=["clipboard","links"] }
egui-wgpu = { version = "0.22.0", features = [ "winit" ] }
cel_wallet={path="../wallet"}
tokio = {version="1.37.0",features=["rt","rt-multi-thread"]}
futures = "0.3.30"
poll-promise = {version="0.3.0",features=["async-std"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
termux-clipboard = "0.1.0"
egui_file="0.10.0"
rand = "0.8.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
openssl = { version = "0.10.64", features = ["vendored"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"

