[package]
name = "cel_wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = {workspace=true}
rust_keyring={path="../rust-keyring"}
query_client={path="../query-client"}
dirs={workspace=true}
toml = {workspace=true}
serde = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
tokio = {version="1.37.0",features = ["rt","macros"]}
thiserror={workspace=true}
hex = "0.4.3"
